# auto-atomic-operation

./: .docs-sync  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
aao_configs/: airbot_g2p_gs.yaml  airbot_p7_arrange_flowers2.yaml  airbot_p7_arrange_flowers_gs.yaml  airbot_p7_cup_on_coaster.yaml  airbot_p7_press_blue_button.yaml  airbot_p7_press_green_button.yaml  airbot_p7_press_pink_button.yaml  airbot_p7_wipe_the_table_gs.yaml  airbot_play_gs.yaml  airbot_play_xf9600_gs.yaml  airbot_xf9600_gs.yaml  arrange_flowers.yaml  arrange_flowers_gs.yaml  base.yaml  base_franka.yaml  basis.yaml  basis_airbot_play_g2p.yaml  basis_airbot_play_xf9600.yaml  basis_franka.yaml  basis_mocap_eef.yaml  basis_mocap_eef_xf9600.yaml  basis_p7_g2p.yaml  basis_p7_xf9600.yaml  basis_p7_xf9600_composable.yaml  basis_xf9600.yaml  close_drawer.yaml  close_hinge_door.yaml  common_vars.yaml  compatible_vars.yaml  cup_on_coaster.yaml  cup_on_coaster_gs.yaml  gs_mixin.yaml  hang_toothbrush_cup.yaml  hang_toothbrush_cup_gs.yaml  mock.yaml  open_door.yaml  open_door_airbot_play.yaml  open_door_airbot_play_back.yaml  open_door_airbot_play_back_gs.yaml  open_door_airbot_play_back_mixin.yaml  (+22 more)
auto-atom/: framework.py
auto_atom/: __init__.py  framework.py  mock.py  policy_eval.py  runtime.py
docs/: README.md  _coverpage.md  _sidebar.md  custom-backend.md  data_collection.md  eef_mapper.md  execution_completion_flow.md  gs_rendering_alignment.md  gs_rendering_performance.md  hf_lfs.md  ik_control.md  index.html  mcap_data_replay.md  mink_iterative_ik.md  policy_evaluation.md  (+3 more)
(+644 files in other folders)
