[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-atomic-operation"
version = "0.1.0"
description = "An automated atomic operation framework based on Mujoco."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenGHz" },
]
dependencies = [
  "hydra-core",
  "mujoco",
  "numpy",
  "pydantic>=2",
  "PyYAML",
]

[tool.setuptools.packages.find]
include = ["auto_atom*"]
namespaces = true
